# A0-music

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  chromaprint_jni.cpp  config.h
app/src/main/java/com/elovaire/music/: A0App.kt  ElovaireApp.kt  MainActivity.kt
app/src/main/java/com/elovaire/music/core/: A0ViewModelDependencies.kt  AndroidApiCompat.kt  AppBridgeCoordinator.kt  AppContainer.kt  AppForegroundTracker.kt  AppRuntimeScope.kt  AppServices.kt  (+7 more)
app/src/main/res/drawable/: ic_a0_forward_filled.xml  ic_about_coffee.xml  ic_about_github.xml  ic_about_globe.xml  ic_about_instagram.xml  ic_about_twitter.xml  ic_elovaire_backward_filled.xml  ic_elovaire_pause_filled.xml  ic_lucide_a_large_small.xml  ic_lucide_align_left.xml  ic_lucide_arrow_down_up.xml  ic_lucide_arrow_line_down.xml  ic_lucide_audio_waveform.xml  ic_lucide_case_sensitive.xml  ic_lucide_check.xml  ic_lucide_chevron_down.xml  ic_lucide_chevron_left.xml  ic_lucide_circle.xml  ic_lucide_circle_play.xml  ic_lucide_disc_3.xml  ic_lucide_disc_album.xml  ic_lucide_download.xml  ic_lucide_ellipsis_vertical.xml  ic_lucide_eye.xml  ic_lucide_eye_off.xml  ic_lucide_gallery_vertical_end.xml  ic_lucide_grid_2x2.xml  ic_lucide_grid_3x3.xml  ic_lucide_house.xml  ic_lucide_info.xml  ic_lucide_library.xml  ic_lucide_list.xml  ic_lucide_list_music.xml  ic_lucide_menu.xml  ic_lucide_mic_vocal.xml  ic_lucide_moon.xml  ic_lucide_music.xml  ic_lucide_palette.xml  ic_lucide_pause.xml  ic_lucide_pencil_line.xml  (+17 more)
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/values-v31/: themes.xml
app/src/main/res/xml/: changelog.xml  info_screen.xml
app/src/test/java/android/net/: TestUri.kt
buildSrc/src/main/kotlin/: AppBuildConfig.kt
gradle/: libs.versions.toml
(+132 files in other folders)
